--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generar Reporte de Productos</title>
+    <title>Reporte Semanal de Productos Consumidos Pizzería</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Reporte de Productos</h1>
+    <h1>Reporte Semanal de Productos Consumidos Pizzería</h1>
+
+    <label for="branch-select">Seleccione la sucursal:</label>
+    <select id="branch-select">
+        <option value="JALAPA">JALAPA</option>
+        <option value="ZACAPA">ZACAPA</option>
+        <option value="ESKALA">ESKALA</option>
+        <option value="SANTA ELENA">SANTA ELENA</option>
+        <option value="POPTUN">POPTUN</option>
+        <option value="PINULA">PINULA</option>
+    </select>
 
     <div id="product-form"></div>
 
