--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Reporte Semanal de Productos Consumidos Pizzería</h1>
+    <h1>CONSUMO PRODUCTOS SEMANALES PIZZERIA</h1>
 
     <label for="branch-select">Seleccione la sucursal:</label>
     <select id="branch-select">
