--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reporte Semanal de Productos Consumidos Pizzería</title>
+    <title>Producto Semanal Consumido Pizzería</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         .example-section {
